<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".FirstFragment"
        tools:ignore="ScrollViewCount">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="8dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hello"
                    android:textColor="#43A047"
                    android:textSize="18sp"
                    android:textStyle="italic|bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helo1"
                    android:textSize="18sp"
                    android:justificationMode="inter_word"
                    tools:targetApi="o" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="8dp"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hello2"
                    android:textColor="#43A047"
                    android:textSize="18sp"
                    android:textStyle="italic|bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello3"
                    android:textSize="18sp"
                    android:justificationMode="inter_word"
                    tools:targetApi="o" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello4"
                    android:textSize="18sp"
                    android:justificationMode="inter_word"
                    tools:targetApi="o"
                    android:layout_marginStart="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello5"
                    android:textSize="18sp"
                    android:justificationMode="inter_word"
                    tools:targetApi="o"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello6"
                    android:textSize="18sp"
                    android:justificationMode="inter_word"
                    tools:targetApi="o"
                    android:layout_marginStart="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello7"
                    android:textSize="18sp"
                    android:justificationMode="inter_word"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello8"
                    android:textSize="18sp"
                    android:justificationMode="inter_word"
                    android:layout_marginStart="16dp"
                    tools:targetApi="o" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="8dp"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello9"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/start"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="#14AE5C"
            android:layout_gravity="center"
            android:text="Bắt đầu ngay"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#FFFFFF"
            tools:ignore="HardcodedText,VisualLintBounds" />

    </LinearLayout>
</ScrollView>
